# SUGFW

./: .gitignore  README.md  pyproject.toml
UC-SAM/: aug_test.ipynb  get_uncertainty.py  judge_difference.py  select_samples.py
UC-SAM/augmentation/: __init__.py  affine_transformation.py  intensity_transformation.py
UC-SAM/command/: getun_Promise12.sh  getun_UTAH.sh  select_Promise12.sh  select_UTAH.sh
UC-SAM/segment_anything/: build_sam.py  predictor.py
UC-SAM/segment_anything/modeling/: __init__.py  image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py
UC-SAM/segment_anything/utils/: transforms.py
UNet/: train.py  val_2D.py
UNet/command/: inference.sh  train_Promise12.sh  train_UTAH.sh
UNet/dataloaders/: dataset.py  sampling.py
UNet/networks/: net_factory.py  unet.py  util.py
preprocessing/: Promise12_pre.py  UTAH_pre.py  split_Promise12.py  split_UTAH.py
